;Judge/Temporary_Error/258.log
./temp/258/code.cpp:1:10: error: #include expects "FILENAME" or <FILENAME>
./temp/258/code.cpp: In function 'int main()':
./temp/258/code.cpp:5:23: error: 'scanf' was not declared in this scope
     scanf("%d%d",&a,&b);
                       ^
./temp/258/code.cpp:6:20: error: 'printf' was not declared in this scope
     printf("%d",a+b);
                    ^
